--- a/argon-dashboard-v1.0.0/examples/index.html
+++ b/argon-dashboard-v1.0.0/examples/index.html
@@ -8,14 +8,14 @@
   <meta name="author" content="Creative Tim">
   <title>EcoLivros</title>
   <!-- Favicon -->
-  <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
+  <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="../assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
+  <link type="text/css" href="../assets/css/argon.css?v=1.0.0" rel="stylesheet">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Brand -->
-      <a class="navbar-brand pt-0" href="./index.html">
-        <img src="./assets/img/brand/carbooks.png" class="navbar-brand-img" alt="...">
+      <a class="navbar-brand pt-0" href="../examples/index.html">
+        <img src="../assets/img/brand/carbooks.png" class="navbar-brand-img" alt="...">
       </a>
       <!-- Collapse -->
       <div class="collapse navbar-collapse" id="sidenav-collapse-main">
@@ -36,8 +36,8 @@
         <div class="navbar-collapse-header d-md-none">
           <div class="row">
             <div class="col-6 collapse-brand">
-              <a href="./index.html">
-                <img src="./assets/img/brand/blue.png">
+              <a href="../examples/index.html">
+                <img src="../assets/img/brand/blue.png">
               </a>
             </div>
             <div class="col-6 collapse-close">
@@ -51,22 +51,22 @@
         <!-- Navigation -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">
+            <a class="nav-link" href="../examples/index.html">
               <i class="ni ni-tv-2 text-primary"></i> Dashboard
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./examples/profile.html">
+            <a class="nav-link" href="../examples/profile.html">
               <i class="ni ni-book-bookmark text-green"></i> Cadastro Livro
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./examples/consulta_livros.html">
+            <a class="nav-link" href="../examples/consulta_livros.html">
               <i class="ni ni-books text-yellow"></i> Consulta Livro
             </a>
           </li>
 	  <li class="nav-item">
-            <a class="nav-link" href="./examples/profile.html">
+            <a class="nav-link" href="../login.html">
               <i class="ni ni ni-user-run text-black"></i> Sair
             </a>
           </li>
@@ -87,7 +87,7 @@
             <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <div class="media align-items-center">
                 <span class="avatar avatar-sm rounded-circle">
-                  <img alt="Image placeholder" src="./assets/img/theme/user.svg">
+                  <img alt="Image placeholder" src="../assets/img/theme/user.svg">
                 </span>
                 <div class="media-body ml-2 d-none d-lg-block">
                   <span class="mb-0 text-sm  font-weight-bold">Fulano</span>
@@ -98,24 +98,24 @@
               <div class=" dropdown-header noti-title">
                 <h6 class="text-overflow m-0">Bem Vindo!</h6>
               </div>
-              <a href="./examples/profile.html" class="dropdown-item">
+              <a href="../examples/profile.html" class="dropdown-item">
                 <i class="ni ni-single-02"></i>
                 <span>Meu Perfil</span>
               </a>
-              <a href="./examples/profile.html" class="dropdown-item">
+              <a href="../examples/profile.html" class="dropdown-item">
                 <i class="ni ni-settings-gear-65"></i>
                 <span>Configurações</span>
               </a>
-              <a href="./examples/profile.html" class="dropdown-item">
+              <a href="../examples/profile.html" class="dropdown-item">
                 <i class="ni ni-calendar-grid-58"></i>
                 <span>Atividades</span>
               </a>
-              <a href="./examples/profile.html" class="dropdown-item">
+              <a href="../examples/profile.html" class="dropdown-item">
                 <i class="ni ni-support-16"></i>
                 <span>Suporte</span>
               </a>
               <div class="dropdown-divider"></div>
-              <a href="#!" class="dropdown-item">
+              <a href="../login.html" class="dropdown-item">
                 <i class="ni ni-user-run"></i>
                 <span>Sair</span>
               </a>
@@ -508,13 +508,13 @@
   </div>
   <!-- Argon Scripts -->
   <!-- Core -->
-  <script src="./assets/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Optional JS -->
-  <script src="./assets/vendor/chart.js/dist/Chart.min.js"></script>
-  <script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
+  <script src="../assets/vendor/chart.js/dist/Chart.min.js"></script>
+  <script src="../assets/vendor/chart.js/dist/Chart.extension.js"></script>
   <!-- Argon JS -->
-  <script src="./assets/js/argon.js?v=1.0.0"></script>
+  <script src="../assets/js/argon.js?v=1.0.0"></script>
 </body>
 
 </html>
