--- a/argon-dashboard-v1.0.0/login.html
+++ b/argon-dashboard-v1.0.0/login.html
@@ -8,14 +8,14 @@
   <meta name="author" content="Creative Tim">
   <title>EcoLivros</title>
   <!-- Favicon -->
-  <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
+  <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="../assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="../assets/css/argon.css?v=1.0.0" rel="stylesheet">
+  <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
 </head>
 
 <body class="bg-default">
@@ -23,8 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
       <div class="container px-4">
-        <a class="navbar-brand" href="../login.html">
-          <img src="../assets/img/brand/carbooks.png" />
+        <a class="navbar-brand" href="./examples/login.html">
+          <img src="./assets/img/brand/carbooks.png" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,8 @@
           <div class="navbar-collapse-header d-md-none">
             <div class="row">
               <div class="col-6 collapse-brand">
-                <a href="../examples/index.html">
-                  <img src="../assets/img/brand/blue.png">
+                <a href="./examples/index.html">
+                  <img src="./assets/img/brand/blue.png">
                 </a>
               </div>
               <div class="col-6 collapse-close">
@@ -49,13 +49,13 @@
           <!-- Navbar items -->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="../examples/register.html">
+              <a class="nav-link nav-link-icon" href="./examples/register.html">
                 <i class="ni ni-circle-08"></i>
                 <span class="nav-link-inner--text">Registrar</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="../login.html">
+              <a class="nav-link nav-link-icon" href="./examples/login.html">
                 <i class="ni ni-key-25"></i>
                 <span class="nav-link-inner--text">Login</span>
               </a>
@@ -71,7 +71,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6">
               <h1 class="text-white">Bem Vindo!</h1>
-              <p class="text-lead text-light">Use esse espaço para criar uma nova conta.</p>
+              <p class="text-lead text-light">Use esse espaço para logar ou criar uma nova conta.</p>
             </div>
           </div>
         </div>
@@ -84,25 +84,16 @@
     </div>
     <!-- Page content -->
     <div class="container mt--8 pb-5">
-      <!-- Table -->
       <div class="row justify-content-center">
-        <div class="col-lg-6 col-md-8">
+        <div class="col-lg-5 col-md-7">
           <div class="card bg-secondary shadow border-0">
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
-                <small>Informe suas credenciais</small>
+                <small>Logue com suas credênciais</small>
               </div>
               <form role="form">
-                <div class="form-group">
-                  <div class="input-group input-group-alternative mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Nome" type="text">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="input-group input-group-alternative mb-3">
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
@@ -117,30 +108,26 @@
                     <input class="form-control" placeholder="Senha" type="password">
                   </div>
                 </div>
-		<div class="form-group">
-                  <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Repita a senha" type="password">
-                  </div>
-                </div>
-                <div class="row my-4">
-                  <div class="col-12">
-                    <div class="custom-control custom-control-alternative custom-checkbox">
-                      <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                      <label class="custom-control-label" for="customCheckRegister">
-                        <span class="text-muted">Eu aceito a <a href="#!">Politica de Privacidade</a></span>
-                      </label>
-                    </div>
-                  </div>
+                <div class="custom-control custom-control-alternative custom-checkbox">
+                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
+                  <label class="custom-control-label" for=" customCheckLogin">
+                    <span class="text-muted">Lembre-me</span>
+                  </label>
                 </div>
                 <div class="text-center">
-		  <a class="nav-link nav-link-icon" href="../login.html">
-	            <button type="button" class="btn btn-primary mt-4">Criar Conta</button>
-	          </a>
+		  <a href="./examples/index.html">
+                    <button type="button" class="btn btn-primary my-4">Logar</button>
+                  </a>
                 </div>
               </form>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-6">
+              <a href="#" class="text-light"><small>Esqueceu a senha?</small></a>
+            </div>
+            <div class="col-6 text-right">
+              <a href="./examples/register.html" class="text-light"><small>Crie uma nova conta</small></a>
             </div>
           </div>
         </div>
@@ -149,10 +136,10 @@
   </div>
   <!-- Argon Scripts -->
   <!-- Core -->
-  <script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Argon JS -->
-  <script src="../assets/js/argon.js?v=1.0.0"></script>
+  <script src="./assets/js/argon.js?v=1.0.0"></script>
 </body>
 
 </html>
